css/style.css
/* ... */
#posts-list article .meta {
  display: block;
  border-top: 1px solid #585246;
  font-size: 14px;
  padding-top: 10px;
}
#posts-list article .meta a {
  color: #cb5432;
}
/* PAGE NAVIGATION ------------------------------------------------------------*/
#main .page-navigation {
  position: relative;
  left: 50%;
  display: block;
  margin-bottom: 100px;
  float: left;
}
#main .page-navigation div {
  position: relative;
  right: 50%;
  box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 0.1);
}
#main .page-navigation div span {
  margin-bottom: 15px;
  display: inline-block;
}
#main .page-navigation a {
  display: block;
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
  color: #cb5432;
  display: block;
  padding: 10px 15px;
}
#main .page-navigation .nav-next {
  float: left;
  margin-right: 20px;
  background: #f3e4c8 url(../img/arrow-left.png) no-repeat left 12px;
  padding-left: 20px;
}
#main .page-navigation .nav-previous {
  float: right;
  background: #f3e4c8 url(../img/arrow-right.png) no-repeat right 12px;
  padding-right: 20px;
}
/* SIDEBAR ------------------------------------------------------------*/
#sidebar {
  position: relative;
  width: 260px;
  float: right;
  font-size: 14px;
}
#sidebar .block {
  margin-bottom: 40px;
  padding-bottom: 5px;
}
#sidebar .heading {
  border-top: 5px solid #444444;
  border-bottom: 5px solid #444444;
  margin-bottom: 15px;
  padding-top: 15px;
  padding-bottom: 10px;
  line-height: 1.1em;
  text-align: center;
}
#sidebar li {
  margin-bottom: 7px;
}
#sidebar a {
  color: #cb5432;
}
/* FILTERED ITEMS ----------------------------------------------------*/.isotope-item {
  z-index: 2;
}
.isotope-hidden.isotope-item {
  pointer-events: none;
  z-index: 1;
}
#filter-buttons {
  text-align: center;
  background: url(../img/filter.png) no-repeat top center;
  height: 47px;
  margin-bottom: 20px;
}
#filter-buttons li {
  display: inline-block;
  margin-bottom: 0px;
}
#filter-buttons li a {
  display: block;
  text-decoration: none;
  margin-bottom: 0px;
  margin-right: 5px;
  line-height: 47px;
  color: #cb5432;
}
#filter-buttons li .selected {
  background: url(../img/filter-arrow.png) no-repeat center top;
}
/* COLUMNS LAYOUT----------------------------------------------------------*/
.one-half,
.one-third,
.one-fourth {
  float: left;
  margin-bottom: 40px;
  margin-right: 2.1276%;
  position: relative;
}
.one-half {
  width: 48.9361%;
}
.one-third {
  width: 31.9148%;
}
.one-fourth {
  width: 23.4042%;
}
.last {
  clear: right;
  margin-right: 0 !important;
}
/* FOOTER ----------------------------------------------------*/footer {
  background: #585246 url(../img/footer.png) repeat-x;
  color: #f3e4c8;
  padding-bottom: 60px;
}
footer a {
  color: #fff;
  text-decoration: none;
}
footer a:hover {
  color: #cb5432;
}
footer h1,
footer h2,
footer h3,
footer h4,
footer h5,
footer h6 {
  color: #f9f5ed;
  font-family: mensch;
  word-spacing: -0.1em;
  text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.3);
  line-height: 1.3em;
}
footer .sb-holder {
  position: relative;
  left: 50%;
  text-align: center;
  float: left;
}
footer #social-bar {
  display: block;
  position: relative;
  float: left;
  right: 50%;
  margin: -7px 5px 0px 5px;
  background: url(../img/social-bg.png) repeat-x;
  height: 46px;
  padding-top: 8px;
  padding-left: 10px;
  padding-right: 10px;
}
footer #social-bar li {
  float: left;
  line-height: 1em;
  margin-left: 3px;
  margin-right: 3px;
}
footer #social-bar li a {
  display: block;
  line-height: 0em;
}
footer #social-bar li a:hover {
  -webkit-transform: translate(0px, -2px);
  -moz-transform: translate(0px, -2px);
  -o-transform: translate(0px, -2px);
  transform: translate(0px, -2px);
}
footer #social-bar .left-corner {
  position: absolute;
  top: 0px;
  left: -10px;
  display: block;
  width: 10px;
  height: 18px;
  background: url(../img/social-left-corner.png) no-repeat left top;
}
footer #social-bar .right-corner {
  position: absolute;
  top: 0px;
  right: -13px;
  display: block;
  width: 10px;
  height: 18px;
  background: url(../img/social-right-corner.png) no-repeat left top;
}
footer #footer-bottom {
  font-size: 14px;
  text-align: center;
  border-top: 1px solid rgba(0, 0, 0, 0.2);
  padding-top: 25px;
}
/* WIDGET COLS ------------------------------------------------------------*/
.widget-cols {
  margin-top: 80px;
  margin-bottom: 30px;
  font-size: 14px;
}
.widget-cols h1,
.widget-cols h2,
.widget-cols h3,
.widget-cols h4,
.widget-cols h5,
.widget-cols h6 {
  margin-bottom: 20px;
  font-weight: normal;
  text-align: center;
  border-bottom: 0px solid #ada18e;
  border-top: 0px solid #ada18e;
  padding-top: 0px;
  padding-bottom: 0px;
}
.widget-cols > li {
  width: 220px;
  float: left;
  margin-right: 20px;
}
.widget-cols > li.fourth-col {
  margin-right: 0px;
}

